--- a/post_app/templates/about.html
+++ b/post_app/templates/about.html
@@ -1,49 +1,2 @@
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <p class="lead">Пост №1 – это комплекс
-                                военно-патриотических мероприятий для учащихся
-                                образовательных учреждений, расположенных в
-                                городе Красноярске.</p>
-
-                            <p>Подготовка к несению почетной караульной службы
-                                позволяет развить у кандидатов в постовцы
-                                дисциплинированность, терпение, стремление
-                                достигать поставленные перед собой задачи.</p>
-
-                            <p>Перед тем, как заступить в почетный караул,
-                                каждый постовец дает «Торжественное обещание» -
-                                высокий патриотический акт
-                                проявления воли и принятия на себя
-                                ответственности.</p>
-
-                            <p>В почетном карауле участвуют 20 учащихся
-                                ежедневно. Вахта будет длиться 4 часа в течение
-                                одного дня (с 10:00 до 14:00),
-                                со сменами караула через каждые 10-15 минут.
-                                Постовцы обеспечиваются единой униформой в
-                                течение несения Вахты за которую они несут
-                                ответственность.</p>
-                        </div>
-                        <div class="col-xs-6">
-                            <p>Каждый постовец сдает зачет по следующим
-                                дисциплинам: строевая подготовка, Устав
-                                караульной службы и строевой Устав,
-                                сборка-разборка автомата Калашникова.</p>
-
-                            <p>Во время нахождения ребят на Посту №1 с ними
-                                проводится организационная работа. Это
-                                проведение инструктажа по правилам техники
-                                безопасности, и организация несения службы
-                                на Посту №1, тренировочные занятия по строевой
-                                подготовке
-                                и получения обмундирования, что имеет большое
-                                значение для поддержания дисциплины.</p>
-
-                            <p>На Посту №1 проводятся образовательные программы,
-                                встречи с ветеранами участниками боевых
-                                действий, интересными людьми, экскурсий по
-                                местам боевой славы, значимым местам города и
-                                края, бывшими часовыми Поста №1, уроки мужества,
-                                военно-спортивные соревнования.</p>
-                        </div>
-                    </div>
+{% load flatblocks %}
+{% flatblock 'about' %}
