--- a/post_app/templates/document.html
+++ b/post_app/templates/document.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 {% load thumbnail %}
 {% block list_item %}
-     <p><a href="{{cur_object.document.url }}">{{cur_object.name }}</a> - {{cur_object.description }}</p>
+     <p><a href="{{cur_object.document.url }}" download>{{ cur_object.name }}</a> - {{cur_object.description }}</p>
 {% endblock %}
